      checker.
  * checks/changes-file.{desc,pm}:
    + [BR] Add patch from Ivo De Decker, add check for
      backports changes file.  (Closes: #732225).
    + [BR] Apply patch from Tomasz Bucher, add check for
      for timestamped gzip files.  (Closes: #738591).
  * checks/menu-format.pm:
    + [BR] Add new desktop keys files. Move key list to data.
      (Closes: #755266).
  * checks/phppear.pm:
    + [BR] Fix a false positive for
      missing-pkg-php-tools-addon phpcomposer, thanks to
      David Prévot (Closes: #754738).
  * checks/source-copyright.{desc,pm}:
    + [BR] Add a pedantic warning about non dep-5 debian/copyright.
    + [BR] Detect empty required fields.  (Closes: #748452).
    + [BR] Detect undefined license.  (Closes: #733659).
  * checks/testsuite.desc:
    + [BR] Update ref url.  (Closes: #755275).
  * checks/description.{desc,pm}:
    + [SL] Check for one word short description.  (Closes: #756643).
    + [SL] Check if the short description is the same as the
      package name.  (Closes: #757398).

  * data/cruft/warn-file-type:
    + [BR] Add debug source suffix for detecting javascript
      source-is-missing and improve test suite. Fix a
      false postive in mono.
  * data/files/js-libraries:
    + [BR] Apply patch from Paul Wise for detection of
      libjs-excanvas.
  * data/files/privacy-breaker-website:
    + [BR] Improve detection of sourceforge logos.
    + [BR] Detect libjs-jquery use.
    + [BR] Detect libjs-mathjax use.
    + [BR] Add count.digitalpoint.com to statistics website.
    + [BR] Add xoom.com to privacy-breach-donation (used by
      freesci-doc package).
    + [BR] Detect libjs-jquery-ui use.
    + [BR] Detect pledgie.com as a donation website.
  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).
  * data/debhelper/dh_commands-manual:
    + [JW] Add dh_apache2 relations to avoid a false-positive.