@@ -379,6 +379,15 @@ Info: The header on this line of the desktop entry has been deprecated in the
  useful for checking the syntax of desktop entries.
 Ref: http://standards.freedesktop.org/desktop-entry-spec/1.0/apc.html
 
+Tag: desktop-mime-but-no-exec-code
+Severity: normal
+Certainty: possible
+Info: The desktop entry lists support for at least one mime type, but does not
+ provide codes like %f, %F, %u or %U for the Exec key.
+ .
+ If the application can indeed handle files of the listed mime types, it should
+ specify a way to pass the filenames as parameters.
+
 Tag: deprecated-kdelnk-file
 Severity: important
 Certainty: certain
